--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,6 @@ deploy:
   keep-history: true # 是否保持target-branch分支的提交记录
   on:
     branch: master # 博客源码的分支
+
+notifications:
+  slack: forecho:SQsHQyf5h6ibbGJAr501gff0
