--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_script:
 
 # script - run the build script
 script:
+  - git submodule update --init
+  - git submodule update --remote --merge
   - hugo
   - echo "blog.forecho.com" > public/CNAME
 
@@ -35,7 +37,7 @@ deploy:
   github-token: $GITHUB_TOKEN # 重要，$GITHUB_TOKEN是变量，需要在GitHub上申请、再到配置到Travis
   email: caizhenghai@gmail.com
   name: forecho
-  #   fqdn: # 如果是自定义域名，此处要填
+  fqdn: blog.forecho.com # 如果是自定义域名，此处要填
   keep-history: true # 是否保持target-branch分支的提交记录
   on:
     branch: master # 博客源码的分支
