--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
 
 deploy:
   provider: pages # 重要，指定这是一份github pages的部署配置
-  cleanup: true # 重要，不能省略
+  skip-cleanup: true # 重要，不能省略
   local-dir: public # 静态站点文件所在目录
   target-branch: gh-pages # 要将静态站点文件发布到哪个分支
   github-token: $GITHUB_TOKEN # 重要，$GITHUB_TOKEN是变量，需要在GitHub上申请、再到配置到Travis
