--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,9 @@ jobs:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: jakejarvis/hugo-build-action@master
         with:
-          hugo-version: '0.74.1'
-          # extended: true
-
-      - name: Build
-        run: hugo --minify
+          args: --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
