--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: github pages
 
+name: "Close stale issues"
 on:
+  schedule:
+    - cron: "*/5 * * * *"
   push:
     branches:
       - master
