update ci 定时执行时间

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: github pages
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: '0 0 * * *'  # every day at midnight
   push:
     branches:
       - master
