feat: 更换代码高亮主题

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ lineNoStart = 1
 lineNos = true
 lineNumbersInTable = true
 noClasses = true
-style = "manni"
+style = "dracula"
 tabWidth = 2
 
 # https://gohugo.io/content-management/urls/#aliases
