--- a/config.toml
+++ b/config.toml
@@ -46,6 +46,7 @@ toc = true
 navItems = [
   ["首页", "/"],
   ["文章归档", "/posts.html"],
+  ["股票投资原则", "https://github.com/forecho/Stock-Investment-Principle/"],
   ["美股开户", "https://stock.forecho.com/"],
   ["关于我", "/about.html"],
   ["联盟链接", "/friendship-links/"],
