fix: fix utterances issueterm

--- a/config.toml
+++ b/config.toml
@@ -86,4 +86,4 @@ rss = "/atom.xml"
 owner = "forecho" # Your GitHub ID
 repo = "hugo-blog"# The repo to store comments
 theme = "github-light"
-issueterm = "pathname"
+issueterm = "title"
