--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ navItems = [
   ["首页", "/"],
   ["文章归档", "/posts.html"],
   ["股票投资原则", "https://github.com/forecho/Stock-Investment-Principle/"],
-  ["美股开户", "https://stock.forecho.com/"],
+  ["美股开户", "https://stocks.forecho.com/"],
   ["关于我", "/about.html"],
   ["联盟链接", "/friendship-links/"],
 ]
